# Job_skills_extractor

./: .replit  README.md  app.py  preprocessing.py  pyproject.toml  skill_categorizer.py  skill_extractor.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--Basic-Feature-List-for-the-JD-Skill-Extractor-App-Each-feature-is-broken-into-Feature-Descript-1744897280727.txt
data/: skill_categories.json  skill_dictionary.json
