[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "fuzzywuzzy>=0.18.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-levenshtein>=0.27.1",
    "spacy>=3.8.5",
    "streamlit>=1.44.1",
]
